# deep_research_paper_chat_ortal

./: .dockerignore  .env.example  .env.production.example  .gitignore  AWS_DEPLOYMENT.md  Dockerfile  README.md  README_SIMPLE.md  apprunner.yaml  crewai_flow.html  docker-compose.yml  poem.txt  pyproject.toml  requirements.txt  requirements_minimal.txt  start_api.py  terminal_chat.py  test_deep_research.py
.github/workflows/: deploy.yml
frontend/synapse-research/: README.md  index.html  tailwind.config.ts
frontend/synapse-research/src/: index.css
frontend/synapse-research/src/components/chat/: ChatHeader.tsx  ChatInput.tsx  ChatInterface.tsx  ChatMessage.tsx  WelcomeScreen.tsx
frontend/synapse-research/src/services/: api.ts
frontend/synapse-research/src/types/: research.ts
src/crewai_flow_workshop1/: api_server.py  main.py
src/crewai_flow_workshop1/tools/: deep_research_paper.py
src/crewai_flow_workshop1/utils/: conversation_handler.py
